# advent-of-code

./: .gitignore  LICENSE  README.md  pyproject.toml
day3/: main.py
day6/: main.py
day7/: main.py
day8/: main.py
day9/: main.py
days/: day11.py
shared/: geom.py  utils.py
years/2015/: day01.py
years/2022/: day01.py  day02.py  day04.py  day05.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
years/2024/: day01.py  day02.py  day03.py  day04.py
years/2025/: day01.py  day02.py
